--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 	</title>
 
 	<body>
+		<h1>Welcome to SargeanTravis' Github.io page!</h1>
 		
+		<p>Content of Interest:
+			
+			<ul>
+				<li><a href="">
+			
+			
+			</ul>
+		</p>
 	
 	
 	
