--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p>Content of Interest:
 			
 			<ul>
-				<li><a href="">
+				<li><a href="lvl17">Click here</a> for the JusticeForLevel17 Mod Beta 0.2.1 for shapez.io!</li>
 			
 			
 			</ul>
