--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 	<body>
 		<h1>Welcome to SargeanTravis' Github.io page!</h1>
-		
-		<p>Content of Interest:
+		<h2>Content of Interest:</h2>
+		<p>
+			
 			
 			<ul>
 				<li><a href="lvl17">Click here</a> for the JusticeForLevel17 Mod Beta 0.2.1 for shapez.io!</li>
