--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>
 			SargeanTravis' Github Projects
 		</title>
+		<link rel="shortcut icon" href="favicon.ico" type="/favicon.ico">
 		
 	</head>
 
