first commit to add shape2O content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h2>Content of Interest:</h2>
 		<p>
 			
-			
+		<h3>JusticeFoOldLevel17 Mod</h3>
 			<ul>
 				<li><a href="http://92.113.78.156/pub/shapezio/lvl17_1.1/" target="_blank"?CLICK HERE </a>for the JFL17 Update 1.1, most likely final major content
 					update for the time being</li>
@@ -27,8 +27,20 @@
 				
 			
 			</ul>
+		
+		<h3>sHape2O test builds</h3>
+		Note: Full releases and STANDALONE zip files will be available for download at another location when they become available
+		<ul>
+			<li><a href="" target="_blank">Click here for 0.0.1 sHape2O beta</a></li>
+			<li><strong>COMING SOON!</strong> 0.0.2 sHape2O beta (fixes regarding water/wire interactions)</li>
+			<li><strong>COMING SOON!</strong> 0.1.0 open shape2O beta (Major test regarding basic pipeline functionality, new painter mechanics, and othe rbugfixes)</li>
+			
+			
+		</ul>
+		
+		
 		</p>
-	
+		
 	
 	
 	
