--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<h3>sHape2O test builds</h3>
 		Note: Full releases and STANDALONE zip files will be available for download at another location when they become available
 		<ul>
-			<li><a href="" target="_blank">Click here for 0.0.1 sHape2O beta</a></li>
+			<li><a href="https://www.sargeantravis.github.io/H2O" target="_blank">Click here for 0.0.1 sHape2O beta</a></li>
 			<li><strong>COMING SOON!</strong> 0.0.2 sHape2O beta (fixes regarding water/wire interactions)</li>
 			<li><strong>COMING SOON!</strong> 0.1.0 open shape2O beta (Major test regarding basic pipeline functionality, new painter mechanics, and othe rbugfixes)</li>
 			
