--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		Note: Full releases and STANDALONE zip files will be available for download at another location when they become available
 		<ul>
 			<li><a href="https://sargeantravis.github.io/H2O/" target="_blank">Click here for 0.0.1 sHape2O beta</a></li>
-			<li><strong>COMING SOON!</strong> 0.0.2 sHape2O beta (fixes regarding water/wire interactions)</li>
+			<li><a href="https://sargeantravis.github.io/H2O_0_0_2" target="_blank">Click here for shape2O lake gen 2.0 beta!</a> (0.0.2)</li>
+			<li><strong>COMING SOON!</strong> 0.0.3 shape2O beta (resource generation 2.0 rework)</li>
 			<li><strong>COMING SOON!</strong> 0.1.0 open shape2O beta (Major test regarding basic pipeline functionality, new painter mechanics, and othe rbugfixes)</li>
 			
 			
